--- a/src/app/budget/budget.component.html
+++ b/src/app/budget/budget.component.html
@@ -1,8 +1,17 @@
-<div class="container m-3">
+<div class="container">
+  <app-select-shown-inform
+    [dataShow]="dataShow"
+    (show)="showOther($event)"
+  ></app-select-shown-inform>
   <ul class="list-group">
-    <li class="list-group-item" *ngFor="let item of getData(); let i = index">
-      {{item.year+'/'+(item.month+1)+'/'+item.day}}
+    <li
+      class="list-group-item"
+      *ngFor="let item of getData(); let i = index"
+      [appOddBGcolor]="i"
+    >
+      {{item.year}}/{{(item.month+1)| number:'2.0'}}/{{ item.day | number:'2.0'}}
       <app-structure-of-expense [expense]="item.budget"></app-structure-of-expense>
     </li>
   </ul>
+  <!--<pre>{{getData() | json | temp}}</pre>-->
 </div>
