--- a/src/app/budget/budget.component.html
+++ b/src/app/budget/budget.component.html
@@ -6,11 +6,12 @@
   <ul class="list-group">
     <li
       class="list-group-item"
-      *ngFor="let item of getData(); let i = index"
+      *ngFor="let item of data; let i = index"
       [appOddBGcolor]="i"
     >
       {{item.year}}/{{(item.month+1)| number:'2.0'}}/{{ item.day | number:'2.0'}}
-      <app-structure-of-expense [expense]="item.budget"></app-structure-of-expense>
+      <app-structure-of-expense *ngIf="item.id != editerDayId; else editExpenses" [expense]="item.budget" (click)="changeEditerId(item.id)"></app-structure-of-expense>
+      <ng-template #editExpenses><app-editer-expenses-of-day></app-editer-expenses-of-day></ng-template>
     </li>
   </ul>
   <!--<pre>{{getData() | json | temp}}</pre>-->
