--- a/src/app/budget/budget.component.html
+++ b/src/app/budget/budget.component.html
@@ -1,16 +1,17 @@
 <div class="container">
   <app-select-shown-inform
-    [dataShow]="dataShow"
+    [dataShow]="getdataShow()"
     (show)="showOther($event)"
   ></app-select-shown-inform>
   <ul class="list-group">
     <li
       class="list-group-item"
-      *ngFor="let item of data; let i = index"
+      *ngFor="let item of getData(); let i = index"
       [appOddBGcolor]="i"
+      (click)="changeEditerId(item.id)"
     >
       {{item.year}}/{{(item.month+1)| number:'2.0'}}/{{ item.day | number:'2.0'}}
-      <app-structure-of-expense *ngIf="item.id != editerDayId; else editExpenses" [expense]="item.budget" (click)="changeEditerId(item.id)"></app-structure-of-expense>
+      <app-structure-of-expense *ngIf="item.id != editerDayId; else editExpenses" [expense]="item.budget"></app-structure-of-expense>
       <ng-template #editExpenses><app-editer-expenses-of-day></app-editer-expenses-of-day></ng-template>
     </li>
   </ul>
