--- a/src/app/editer-expenses-of-day/editer-expenses-of-day.component.html
+++ b/src/app/editer-expenses-of-day/editer-expenses-of-day.component.html
@@ -1,3 +1,56 @@
-<p>
-  editer-expenses-of-day works!
-</p>
+<form (ngSubmit)="saveNewDataForDay(newDay)" #newDay="ngForm">
+  <div class="form-group">
+    <label class="col-form-label"> На еду:
+      <input
+        type="number"
+        class="form-control"
+        [(ngModel)]="budgetOnDay.food"
+        name="food"
+      >
+    </label>
+  </div>
+  <div class="form-group">
+    <label class="col-form-label"> На налоги:
+      <input
+        type="number"
+        class="form-control"
+        [(ngModel)]="budgetOnDay.utility"
+        name="utility"
+      >
+    </label>
+  </div>
+  <div class="form-group">
+    <label class="col-form-label"> На одежду:
+      <input
+        type="number"
+        class="form-control"
+        [(ngModel)]="budgetOnDay.dress"
+        name="dress"
+      >
+    </label>
+  </div>
+  <div class="form-group">
+    <label class="col-form-label"> На питомца:
+      <input
+        type="number"
+        class="form-control"
+        [(ngModel)]="budgetOnDay.pet"
+        name="pet"
+      >
+    </label>
+  </div>
+  <div class="form-group">
+    <label class="col-form-label"> На транспорт:
+      <input
+        type="number"
+        class="form-control"
+        [(ngModel)]="budgetOnDay.transport"
+        name="transport"
+      >
+    </label>
+  </div>
+  <button class="btn badge-success" type="submit">
+    Сохранить
+  </button>
+
+</form>
