--- a/src/app/budget/budget.component.html
+++ b/src/app/budget/budget.component.html
@@ -10,9 +10,17 @@
       [appOddBGcolor]="i"
       (click)="changeEditerId(item.id)"
     >
-      {{item.year}}/{{(item.month+1)| number:'2.0'}}/{{ item.day | number:'2.0'}}
-      <app-structure-of-expense *ngIf="item.id != getEditerDayBudget(); else editExpenses" [expense]="item.budget"></app-structure-of-expense>
-      <ng-template #editExpenses><app-editer-expenses-of-day></app-editer-expenses-of-day></ng-template>
+      {{item.year}}/
+      {{(item.month+1)| number:'2.0'}}/
+      {{ item.day | number:'2.0'}}
+      <app-structure-of-expense
+        *ngIf="item.id != getEditerDayBudget(); else editExpenses"
+        [expense]="item.budget">
+
+      </app-structure-of-expense>
+      <ng-template #editExpenses>
+        <app-editer-expenses-of-day></app-editer-expenses-of-day>
+      </ng-template>
     </li>
   </ul>
   <!--<pre>{{getData() | json | temp}}</pre>-->
