chart of budget try line

--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -3,5 +3,8 @@
   (show)="showOther($event)"
 ></app-select-shown-inform>
 <google-chart
-  [data]="pieChartData">
+  [data]="pieChartDataStructureBudget">
+</google-chart>
+<google-chart
+  [data]="pieChartDataBudget">
 </google-chart>
