--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,10 @@
-<p>
-  main works!
-</p>
+<div class="headContainer">
+
+  <h1 class="header text-center">{{'svidrsbank'|uppercase}}</h1>
+  <a class="nav-link text-center" routerLink="/" routerLinkActive="Active" [routerLinkActiveOptions]="{exact:true}">
+    <button class="myBTN">
+      Перейти
+    </button>
+  </a>
+
+</div>
