--- a/src/app/select-shown-inform/select-shown-inform.component.html
+++ b/src/app/select-shown-inform/select-shown-inform.component.html
@@ -1,4 +1,4 @@
-<form class="form-check-inline">
+<form class="form-check-inline mt-2 mt-2">
   <label for='mySelect' class="col-form-label mr-2">Период:</label>
   <select [(ngModel)]="dataShow" (ngModelChange)="showOther()" id="mySelect" name="mySelect" class="custom-select">
     <option *ngFor="let item of getSelect()" [value]="item.value">
