--- a/src/app/navigate/navigate.component.html
+++ b/src/app/navigate/navigate.component.html
@@ -1,7 +1,19 @@
-<div class="Links">
-  <a routerLink="/" routerLinkActive="Active" [routerLinkActiveOptions]="{exact:true}">Главная</a>
-  |
-  <a routerLink="/budget" routerLinkActive="Active">Бюджет</a>
-  |
-  <a routerLink="/statistics" routerLinkActive="Active">Статистика</a>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-label="Toggle navigation" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">SVIDRSbank</a>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo03" [ngbCollapse]="isCollapsed">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/" routerLinkActive="Active" [routerLinkActiveOptions]="{exact:true}">Главная</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/budget" routerLinkActive="Active">Бюджет</a>      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/statistics" routerLinkActive="Active">Статистика</a>
+      </li>
+    </ul>
+  </div>
+</nav>
