--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,10 +1,36 @@
 <div class="headContainer">
 
   <h1 class="header text-center">{{'svidrsbank'|uppercase}}</h1>
-  <a class="nav-link text-center" routerLink="/" routerLinkActive="Active" [routerLinkActiveOptions]="{exact:true}">
+  <a class="nav-link text-center" routerLink="/budget" routerLinkActive="Active" [routerLinkActiveOptions]="{exact:true}">
     <button class="myBTN">
       Перейти
     </button>
   </a>
 
+</div>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <h3 class="tagline text-center">Начните учёт финансов уже сегодня вместе с нашим приложением</h3>
+    </div>
+  </div>
+  <footer class="footer">
+    <div class="row">
+      <div class="col-sm-4 col-12 iconBox">
+        <div class="imgSpriteOne">
+        </div>
+        <p class="text-dark">Бесплатно</p>
+      </div>
+      <div class="col-sm-4 col-12 iconBox">
+        <div class="imgSpriteTwo">
+        </div>
+        <p class="text-dark">Без регистрации</p>
+      </div>
+      <div class="col-sm-4 col-12 iconBox">
+        <div class="imgSpriteThree">
+        </div>
+        <p class="text-dark">Доступ 24/7</p>
+      </div>
+    </div>
+  </footer>
 </div>
