--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,21 +1,110 @@
 .headContainer{
   width: 100%;
-  height: 60vh;
+  height: 50vh;
+  min-height: 210px;
   overflow: hidden;
   background-image: url(../../img/BACKGROUND.jpg);
   background-position: center;
+  background-size: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 @font-face {
   font-family: BerlinSans; /* Имя шрифта */
   src: url(../../fonts/BRLNSR.TTF); /* Путь к файлу со шрифтом */
 }
 .header{
+  margin-top: 12vh;
   font-size: 10em;
-  font-family:"BerlinSans";
+  font-family: "BerlinSans", serif;
   color: #575555;
   -webkit-text-fill-color: #575555;
   -webkit-text-stroke: 1px white;
 }
 .myBTN{
-
+  font-family: "Calibri", serif;
+  margin-bottom: 20px;
+  padding: 0;
+  font-size: 2em;
+  background: none;
+  border: 2px solid white;
+  color: white;
+  width: 300px;
+  height: 80px;
+}
+.myBTN:hover{
+  cursor: hand;
+  border: 4px solid lightgray;
+  color: lightgray;
+}
+.iconBox{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.imgSpriteOne,.imgSpriteTwo,.imgSpriteThree{
+   width: 105px;
+   height: 105px;
+   float: left;
+   background: url(../../img/327645_632_canny_pic.jpg) no-repeat;
+   background-position: -110px -3px;
+   background-size: 316px 222px;
+ }
+.imgSpriteTwo {
+  background-position: -3px -115px;
+}
+.imgSpriteThree {
+  background-position: -110px -115px;
+}
+.text-dark{
+  font-family: "Calibri", serif;
+  color: #575555;
+}
+.tagline{
+  font-family: "Calibri", serif;
+  color: #575555;
+  font-size: 2.8em;
+  margin-top: 3%;
+  margin-bottom: 8%;
+}
+@media screen and (max-width: 940px) {
+  .header{
+    margin-top: 18vh;
+    font-size: 7em;
+  }
+  .myBTN{
+    font-size: 1.5em;
+    width: 200px;
+    height: 50px;
+  }
+}
+@media screen and (max-width: 730px) {
+  .header{
+    margin-top: 18vh;
+    font-size: 5em;
+  }
+  .tagline{
+    font-size: 2em;
+  }
+  .myBTN{
+    font-size: 1.5em;
+    width: 200px;
+    height: 50px;
+  }
+}
+@media screen and (max-height: 720px) {
+  .header{
+    margin-top: 15vh;
+    font-size: 5em;
+    margin-bottom: 0;
+  }
+  .tagline{
+    font-size: 2em;
+  }
+  .myBTN{
+    font-size: 1.5em;
+    width: 200px;
+    height: 50px;
+  }
 }
