--- a/src/app/navigate/navigate.component.html
+++ b/src/app/navigate/navigate.component.html
@@ -6,7 +6,7 @@
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03" [ngbCollapse]="isCollapsed">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" routerLink="/" routerLinkActive="Active" [routerLinkActiveOptions]="{exact:true}">Главная</a>
       </li>
       <li class="nav-item">
