--- a/src/app/navigate/navigate.component.html
+++ b/src/app/navigate/navigate.component.html
@@ -10,9 +10,12 @@
         <a class="nav-link" routerLink="/" routerLinkActive="Active" [routerLinkActiveOptions]="{exact:true}">Главная</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/budget" routerLinkActive="Active">Бюджет</a>      </li>
+        <a class="nav-link" routerLink="/budget">Бюджет</a>      </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/statistics" routerLinkActive="Active">Статистика</a>
+        <a class="nav-link" routerLink="/statistics">Статистика</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/settings">Настройки</a>
       </li>
     </ul>
   </div>
