--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -7,22 +7,9 @@
       [appOddBGcolor]="i"
       (click)="changeEditerId(i)"
     >
-      {{item.nameForUser}}
+      {{item.nameForUser | uppercase}}
       <ng-template [ngIf]="i == getEditerExpense()">
         <app-set-expenses [setting]="settings[i]"></app-set-expenses>
-        <!--<input class="form-control"
-               type="text"
-               [value]="settings[i]?.nameForUser"
-        >
-        <input class="form-control"
-                type="text"
-                [value]="settings[i]?.nameJS"
-        >
-        <input class="form-control color-picker"
-               type="color"
-               (change)="changeColor($event.target.value)"
-               [value]="settings[i]?.color"
-        >-->
       </ng-template>
     </li>
   </ul>
