--- a/src/app/budget/budget.component.html
+++ b/src/app/budget/budget.component.html
@@ -10,13 +10,15 @@
       [appOddBGcolor]="i"
       (click)="changeEditerId(item.id)"
     >
-      {{item.year}}/
-      {{(item.month+1)| number:'2.0'}}/
-      {{ item.day | number:'2.0'}}
-      <app-structure-of-expense
-        *ngIf="item.id != getEditerDayBudget(); else editExpenses"
-        [expense]="item.budget">
-      </app-structure-of-expense>
+      {{item.year}}/{{(item.month+1)| number:'2.0'}}/{{ item.day | number:'2.0'}}
+      <ng-container *ngIf="item.id != getEditerDayBudget(); else editExpenses">
+        <app-structure-of-expense
+          [expense]="item.budget.income">
+        </app-structure-of-expense>
+        <app-structure-of-expense
+          [expense]="item.budget.costs">
+        </app-structure-of-expense>
+      </ng-container>
       <ng-template #editExpenses>
         <app-editer-expenses-of-day></app-editer-expenses-of-day>
       </ng-template>
